--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,6 +2,9 @@
   --white: #ffffff;
   --black: #000000;
   --logo-blur: #8f20a1;
+  --hero-gradient-btn: linear-gradient(90deg, #882898 0%, #901fa3 100%);
+
+  --special-hero-top-seller: #cb66db;
 
   --bg: #1f1720;
   --ff: 'Montserrat', sans-serif;
