feat: Add Top Seller block and UI improvements
* Added Top Seller section to HTML structure
* Created comprehensive styles for Top Seller block
* Implemented Top Seller interaction logic:
  * Data loading for slider via dropdown menu
    * Horizontal slider navigation with both mouse controls and
      navigation buttons
      * Enhanced overall site block rendering
      * Refined global styling elements

--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -119,7 +119,7 @@
 
     background: transparent;
 
-    background-image: url(../svg/search.svg);
+    background-image: url('/image/svg/search.svg');
     background-position: 18px center;
     background-repeat: no-repeat;
 
