--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -127,9 +127,9 @@
       transition: opacity 0.6s;
       color: var(--white);
 
-      &::before {
-        content: '';
-      }
+      // &::before {
+      //   content: '';
+      // }
     }
 
     &:focus,
