--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -26,18 +26,14 @@ input {
   line-height: inherit;
   font-family: inherit;
   background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
-//img {
-//  width: 100%;
-//  height: 100%;
-//  object-fit: cover;
-//}
 
 ul,
 li {
@@ -62,24 +58,24 @@ li {
   margin: 0 auto;
 }
 
-.navigation {
-  position: absolute;
-  visibility: hidden;
-  opacity: 0;
+//.navigation {
+//  position: absolute;
+//  visibility: hidden;
+//  opacity: 0;
 
-  transition: opacity 0.6;
-  top: 100%;
-  left: calc(50% - 1px);
+//  transition: opacity 0.6;
+//  top: 100%;
+//  left: calc(50% - 1px);
 
-  button {
-    width: 35px;
-    aspect-ratio: 1;
-    background: linear-gradient(90deg, #87289871 0%, #8f1fa362 100%);
-    border-radius: 12px;
-    border: 0;
-    cursor: pointer;
-  }
-}
+//  button {
+//    width: 35px;
+//    aspect-ratio: 1;
+//    background: linear-gradient(90deg, #87289871 0%, #8f1fa362 100%);
+//    border-radius: 12px;
+//    all: unset;
+//    cursor: pointer;
+//  }
+//}
 
 .highlight {
   background-color: yellow;
