--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -8,6 +8,10 @@
 html {
   width: 100%;
   height: 100%;
+  scroll-behavior: smooth;
+  //scroll-padding-top: размер шапки, если шапка фиксированная;
+  scrollbar-gutter: stable;
+  //для модальных окон, чтобы не скакал скролл
 }
 
 body {
@@ -16,6 +20,9 @@ body {
   background: var(--bg);
   color: var(--white);
   font-family: var(--ff);
+  &.lock {
+    overflow: hidden;
+  }
 }
 
 button,
