--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 20px;
   }
 
   &__logo {
@@ -71,6 +72,9 @@
 
     display: flex;
     gap: 30px;
+    @media (max-width: 1200px) {
+      display: none;
+    }
   }
 
   &__item {
@@ -101,17 +105,17 @@
   }
 }
 .search {
-  max-width: 300px;
+  max-width: 248px;
   justify-content: flex-end;
-  flex: 1 1 auto;
   display: flex;
+
   gap: 20px;
 
   &__input {
-    max-width: 116px;
+    width: 116px;
     border: 1px solid var(--white);
     border-radius: 10px;
-    transition: max-width 0.6s;
+    transition: width 0.6s;
     padding: 10px 18px 10px 42px;
 
     background: transparent;
@@ -131,8 +135,7 @@
 
     &:focus,
     &:hover {
-      max-width: 100%;
-      flex: 1 1 auto;
+      width: 300px;
       border: 1px solid #882898;
       box-shadow: 1px 1px 15px 0 rgba(201, 55, 225, 0.55);
       &::placeholder {
@@ -141,6 +144,9 @@
     }
     &:active {
       box-shadow: 3px 4px 8px 0 rgba(201, 55, 225, 0.15);
+    }
+    @media (max-width: 768px) {
+      display: none;
     }
   }
 
@@ -161,6 +167,9 @@
       background: transparent;
       border: 1px solid var(--white);
       box-shadow: 1px 1px 15px 0 rgba(201, 55, 225, 0.55);
+    }
+    @media (max-width: 480px) {
+      display: none;
     }
   }
 }
