--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -124,3 +124,95 @@ li {
 .cursorGrabbing {
   cursor: grabbing;
 }
+
+//burger========================================
+.burger-container {
+  display: none;
+  justify-content: flex-end;
+  @media (max-width: 1200px) {
+    display: flex;
+    width: 30px;
+  }
+}
+
+.icon-menu {
+  display: none;
+
+  @media (max-width: 1200px) {
+    display: block;
+    flex: 0 0 30px;
+    height: 18px;
+    position: relative;
+    z-index: 5;
+    background-color: transparent;
+
+    & span,
+    &:before,
+    &:after {
+      content: '';
+      right: 0;
+      position: absolute;
+      width: 100%;
+      height: 0.125rem;
+      background-color: #fff;
+      transition: all 0.4s;
+    }
+    &:before {
+      top: 0;
+    }
+    &:after {
+      bottom: 0;
+    }
+    & span {
+      top: calc(50% - 0.0625rem);
+    }
+    &.active:before {
+      transform: rotate(-45deg);
+      top: calc(50% - 0.0625rem);
+    }
+    &.active:after {
+      transform: rotate(45deg);
+      bottom: calc(50% - 0.0625rem);
+    }
+    &.active span {
+      width: 0;
+    }
+  }
+}
+
+.burger-page {
+  display: flex;
+  position: fixed;
+  z-index: 2;
+
+  scale: 0;
+  top: 0;
+  left: -100%;
+
+  width: 100%;
+  height: 100%;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  background-color: #11182723;
+  backdrop-filter: blur(10px);
+
+  transition: all 0.4s;
+
+  &.active {
+    left: 0;
+    scale: 1;
+  }
+  //&__item {
+  //}
+
+  &__link {
+    font-size: 2.25rem;
+    color: var(--hero-text-color);
+    font-weight: var(--title-context-weight);
+  }
+}
+
+//burger========================================
