--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -1,14 +1,25 @@
 .footer {
   margin: 65px 0 130px 0;
+  @media (max-width: 480px) {
+    margin-bottom: 65px;
+  }
 }
 .footer__container {
   display: flex;
   gap: 45px;
+
+  @media (max-width: 1200px) {
+    flex-direction: column;
+  }
 }
 .footer__info {
   display: flex;
   flex-direction: column;
   max-width: 319px;
+  @media (max-width: 1200px) {
+    order: 2;
+    max-width: 480px;
+  }
 }
 .foote__logo {
   margin-bottom: 37px;
@@ -48,6 +59,10 @@
   flex: 1 1 auto;
   font-size: 1.125rem;
   font-weight: 200;
+
+  @media (max-width: 1200px) {
+    margin-bottom: 25px;
+  }
 }
 .footer__social {
 }
@@ -88,6 +103,17 @@
   justify-content: space-between;
   display: flex;
   gap: 72px;
+  @media (max-width: 832px) {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+  }
+  @media (max-width: 658px) {
+    justify-content: flex-start;
+  }
+  @media (max-width: 360px) {
+    padding-left: 50px;
+  }
 }
 .nav-footer {
   font-size: 1.25rem;
