--- a/src/assets/styles/hero.scss
+++ b/src/assets/styles/hero.scss
@@ -1,22 +1,41 @@
 .hero {
-  //  max-height: calc(100vh - 143px);
+  @media (max-width: 768px) {
+    margin-bottom: 250px;
+  }
   &__container {
     display: flex;
     justify-content: space-between;
-    padding-left: 176px;
-  }
+    padding-left: clamp(30px, calc(-877.12px + 70.87vw), 176px);
 
+    @media (max-width: 1024px) {
+      flex-direction: column;
+    }
+    @media (max-width: 768px) {
+      gap: 30px;
+    }
+  }
   &__content {
-    max-width: 467px;
-    padding-top: 55px;
+    padding-top: clamp(15.04px, calc(-51.68px + 13.89vw), 55.04px);
   }
-
-  &__nft {
-  }
+  // &__nft {
+  // }
 }
 
 .content-hero {
-  flex: 1 1 50%;
+  flex: 0 1 37%;
+
+  @media (max-width: 1024px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      'title statistic'
+      'text statistic'
+      'group-btn statistic';
+  }
+  @media (max-width: 480px) {
+    display: flex;
+    flex-direction: column;
+  }
   > *:not(:last-child, .content-hero__group-btn) {
     margin-bottom: 30px;
   }
@@ -28,6 +47,7 @@
 
     transform: scale(0);
     opacity: 0;
+
     animation: pulse 2s forwards;
 
     @keyframes pulse {
@@ -41,19 +61,28 @@
         opacity: 1;
       }
     }
+    @media (max-width: 1024px) {
+      grid-area: title;
+    }
   }
 
   &__text {
+    grid-area: text;
     line-height: 1.25;
     font-weight: 300;
   }
 
   &__group-btn {
     display: flex;
+
     gap: 20px;
 
     font-weight: 300;
-    margin-bottom: 70px;
+    margin-bottom: clamp(40px, calc(-80px + 11.72vw), 70.08px);
+
+    @media (max-width: 1024px) {
+      grid-area: group-btn;
+    }
   }
 
   &__button {
@@ -77,20 +106,31 @@
   }
 
   &__statistic {
+    @media (max-width: 1024px) {
+      grid-area: statistic;
+      place-self: center center;
+    }
   }
 }
 
 .statistic {
   max-width: 116px;
   display: flex;
+  flex-shrink: 0;
   flex-direction: column;
-  gap: 20px;
+  gap: clamp(10.08px, calc(-9.92px + 6.25vw), 20px);
 
+  @media (max-width: 480px) {
+    width: 100%;
+    flex-direction: row;
+    place-self: start center;
+    order: 2;
+  }
   &__item {
     display: grid;
     justify-content: start;
     align-items: center;
-    gap: 4px 13px;
+    gap: 4px clamp(7.04px, calc(-4.96px + 3.75vw), 12.96px);
     grid-template-areas: 'icon count' 'icon subtitle';
   }
 
@@ -117,18 +157,28 @@
     font-weight: 200;
   }
 }
-
 .nft {
   position: relative;
-  flex: 0 1 50%;
+  flex: 0 1 65%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  @media (max-width: 1024px) {
+  }
 
   &__image {
     position: relative;
-    width: 100%;
-    height: 100%;
-    padding: 0 212px;
+    max-width: 390px;
+
+    @media (max-width: 768px) {
+      padding: 0 30px;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
 
     &:after {
       position: absolute;
@@ -150,8 +200,9 @@
     right: 0;
     bottom: 11px;
     display: flex;
+    gap: 20px;
     justify-content: space-between;
-    padding: 19px 50px;
+    padding: 19px clamp(30.08px, calc(-3.12rem + 7.81vw), 50.08px);
 
     box-shadow: 0 4px 500px 0 rgba(0, 0, 0, 0.25);
     background: linear-gradient(
@@ -160,6 +211,17 @@
       rgba(58, 57, 72, 0.98) 97.47%
     );
     border-radius: 10px;
+    @media (max-width: 1024px) {
+      max-width: 700px;
+      right: auto;
+    }
+    @media (max-width: 768px) {
+      flex-direction: column;
+      gap: 10px;
+      max-width: 320px;
+      left: 0;
+      bottom: -229px;
+    }
   }
 
   &__bid {
@@ -179,6 +241,9 @@
     font-size: 2.25rem;
     line-height: 1.22;
     font-weight: 600;
+    @media (max-width: 768px) {
+      font-size: 1.5rem;
+    }
   }
 
   &__value {
@@ -192,8 +257,8 @@
     gap: 7px;
   }
 
-  &__timer {
-  }
+  // &__timer {
+  // }
 
   &__group-btn {
     display: flex;
@@ -230,6 +295,7 @@
 
   &__number {
     position: relative;
+    width: 48px;
     height: 44px;
     font-size: 2.25rem;
     line-height: 1.22;
@@ -240,10 +306,18 @@
       position: absolute;
       width: 100%;
     }
+    @media (max-width: 768px) {
+      font-size: 1.5rem;
+      width: 30px;
+      height: 30px;
+    }
   }
 
   &__string {
     line-height: 1.25;
     font-weight: 200;
+  }
+  @media (max-width: 768px) {
+    gap: 20px;
   }
 }
