--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -61,7 +61,7 @@ li {
 
 [class*='__container'] {
   max-width: 1486px;
-  padding: 0 60px;
+  padding: 0 clamp(30px, calc(-156.48px + 14.56vw), 60px);
   margin: 0 auto;
 }
 
@@ -100,11 +100,11 @@ li {
   flex-direction: column;
   & > *:not(:first-child) {
     margin: 65px 0;
+    @media (max-width: 480px) {
+      margin: 45px 0;
+    }
   }
   &__hero {
-    margin-bottom: 65px;
-  }
-  &__top-seller {
   }
 }
 
@@ -129,7 +129,7 @@ li {
 .burger-container {
   display: none;
   justify-content: flex-end;
-  @media (max-width: 1200px) {
+  @media (max-width: 1280px) {
     display: flex;
     width: 30px;
   }
@@ -138,7 +138,7 @@ li {
 .icon-menu {
   display: none;
 
-  @media (max-width: 1200px) {
+  @media (max-width: 1280px) {
     display: block;
     flex: 0 0 30px;
     height: 18px;
