--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -216,3 +216,21 @@ li {
 }
 
 //burger========================================
+
+// same button
+
+[class*='--some-button'] {
+  padding: 10px 29px;
+  border: 1px solid var(--white);
+  border-radius: 10px;
+
+  font-size: 0.9375rem;
+  line-height: 1.2;
+
+  &:hover,
+  &:focus {
+    border-color: transparent;
+    background-color: #a658b3;
+    box-shadow: 3px 3px 14px 0 rgba(166, 88, 179, 0.36);
+  }
+}
